--- a/app/src/main/res/layout/lines_fragment.xml
+++ b/app/src/main/res/layout/lines_fragment.xml
@@ -2,14 +2,24 @@
 <FrameLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context=".lines.LinesFragment">
 
-  <TextView
-    android:id="@+id/textViewLines"
+  <android.support.v7.widget.RecyclerView
+    android:id="@+id/linesRecyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:text="Lines Fragment"/>
+    android:visibility="visible"
+    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+    tools:listitem="@layout/line_item" />
+
+  <ProgressBar
+    android:id="@+id/progressBar"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:visibility="gone"/>
 
 </FrameLayout>
