--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
   <dimen name="default_margin">@dimen/default_padding</dimen>
   <dimen name="small_padding">8dp</dimen>
   <dimen name="small_margin">@dimen/small_padding</dimen>
+  <dimen name="synoptic_size">40dp</dimen>
 </resources>
