--- a/app/src/main/res/layout/line_item.xml
+++ b/app/src/main/res/layout/line_item.xml
@@ -23,7 +23,7 @@
     android:id="@+id/nameTextView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textSize="18sp"
+    android:textSize="@dimen/default_text_size"
     android:lines="2"
     android:ellipsize="end"
     android:layout_marginStart="@dimen/default_margin"
