--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
   <dimen name="small_padding">8dp</dimen>
   <dimen name="small_margin">@dimen/small_padding</dimen>
   <dimen name="synoptic_size">40dp</dimen>
+  <dimen name="default_text_size">18sp</dimen>
 </resources>
