--- a/app/src/main/res/layout/menu_fragment.xml
+++ b/app/src/main/res/layout/menu_fragment.xml
@@ -5,7 +5,7 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context=".menu.MenuFragment">
+  tools:context="org.galio.bussantiago.ui.menu.MenuFragment">
 
   <android.support.v7.widget.RecyclerView
     android:id="@+id/menuOptionsRecyclerView"
