Migrated project to AndroidX

--- a/app/src/main/res/layout/lines_fragment.xml
+++ b/app/src/main/res/layout/lines_fragment.xml
@@ -7,12 +7,12 @@
   android:layout_height="match_parent"
   tools:context="org.galio.bussantiago.ui.lines.LinesFragment">
 
-  <android.support.v7.widget.RecyclerView
+  <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/linesRecyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:visibility="visible"
-    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     tools:listitem="@layout/line_item" />
 
   <ProgressBar
