--- a/app/src/main/res/layout/information_fragment.xml
+++ b/app/src/main/res/layout/information_fragment.xml
@@ -6,18 +6,25 @@
   android:layout_height="match_parent"
   tools:context="org.galio.bussantiago.ui.information.InformationFragment">
 
-  <TextView
-    android:id="@+id/informationTextView"
+  <ScrollView
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="@dimen/default_padding"
-    android:textSize="@dimen/default_text_size"/>
+    android:layout_height="match_parent">
+
+    <TextView
+      android:id="@+id/informationTextView"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:padding="@dimen/default_padding"
+      android:textSize="@dimen/default_text_size"/>
+
+  </ScrollView>
 
   <ProgressBar
     android:id="@+id/progressBar"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:visibility="gone"/>
+    android:visibility="gone"
+    tools:visibility="visible"/>
 
 </FrameLayout>
