--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,6 @@
   <fragment
     android:id="@+id/linesFragment"
     android:name="org.galio.bussantiago.ui.lines.LinesFragment"
-    android:label="@string/lines"
     tools:layout="@layout/lines_fragment">
 
     <action
@@ -18,7 +17,7 @@
 
   </fragment>
 
-  <dialog-fragment
+  <dialog
     android:id="@+id/menuFragment"
     android:name="org.galio.bussantiago.ui.menu.MenuFragment"
     tools:layout="@layout/menu_fragment">
@@ -27,12 +26,11 @@
       android:id="@+id/actionShowInformation"
       app:destination="@id/informationFragment" />
 
-  </dialog-fragment>
+  </dialog>
 
   <fragment
     android:id="@+id/informationFragment"
     android:name="org.galio.bussantiago.ui.information.InformationFragment"
-    android:label="@string/information"
     tools:layout="@layout/information_fragment">
   </fragment>
 
