--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -30,6 +30,10 @@
       android:id="@+id/actionShowIncidences"
       app:destination="@id/incidencesFragment" />
 
+    <action
+      android:id="@+id/actionShowBusStops"
+      app:destination="@id/busStopsFragment" />
+
   </dialog>
 
   <fragment
@@ -42,6 +46,12 @@
     android:id="@+id/incidencesFragment"
     android:name="org.galio.bussantiago.ui.incidences.IncidencesFragment"
     tools:layout="@layout/incidences_fragment">
+  </fragment>
+
+  <fragment
+    android:id="@+id/busStopsFragment"
+    android:name="org.galio.bussantiago.ui.stops.BusStopsFragment"
+    tools:layout="@layout/busstops_fragment">
   </fragment>
 
 </navigation>
