--- a/app/src/main/res/layout/busstop_item.xml
+++ b/app/src/main/res/layout/busstop_item.xml
@@ -8,7 +8,7 @@
   android:padding="@dimen/default_padding"
   android:gravity="center_vertical"
   android:background="?attr/selectableItemBackground"
-  tools:context="org.galio.bussantiago.features.stops.BusStopsFragment">
+  tools:context="org.galio.bussantiago.features.stops.BusStopsAdapter">
 
   <TextView
     android:id="@+id/codeTextView"
