--- a/app/src/main/res/layout/favorite_item.xml
+++ b/app/src/main/res/layout/favorite_item.xml
@@ -5,29 +5,26 @@
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:orientation="horizontal"
-  android:paddingStart="@dimen/default_padding"
-  android:paddingEnd="@dimen/default_padding"
-  android:paddingTop="@dimen/small_padding"
-  android:paddingBottom="@dimen/small_padding"
+  android:padding="@dimen/default_padding"
   android:gravity="center_vertical"
   android:background="?attr/selectableItemBackground"
-  tools:context="org.galio.bussantiago.features.lines.LinesAdapter">
+  tools:context="org.galio.bussantiago.features.favorites.BusStopFavoritesAdapter">
 
-  <org.galio.bussantiago.common.ui.SynopticView
-    android:id="@+id/synopticView"
-    android:layout_width="@dimen/synoptic_size"
-    android:layout_height="@dimen/synoptic_size"
-    tools:text="P2" />
+  <TextView
+    android:id="@+id/codeTextView"
+    android:layout_width="44dp"
+    android:layout_height="wrap_content"
+    android:textSize="18dp"
+    android:textStyle="bold"
+    android:textColor="@android:color/darker_gray"
+    tools:text="512"/>
 
   <TextView
     android:id="@+id/nameTextView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textSize="@dimen/default_text_size"
-    android:lines="2"
-    android:ellipsize="end"
     android:layout_marginStart="@dimen/default_margin"
-    android:gravity="center_vertical"
-    tools:text="Est. de autobuses / Ortoño de autobuses"/>
+    tools:text="Rúa de Sandino (fr. nº 62A) "/>
 
 </LinearLayout>
