--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -13,8 +13,8 @@
     android:id="@+id/iconImageView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:contentDescription="@string/menu_icon_description"
-    tools:src="@drawable/ic_information"/>
+    tools:src="@drawable/ic_information"
+    tools:ignore="ContentDescription" />
 
   <TextView
     android:id="@+id/titleTextView"
