--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
   <dimen name="synoptic_size">40dp</dimen>
   <dimen name="default_text_size">18sp</dimen>
   <dimen name="dialog_size">300dp</dimen>
+  <dimen name="busStopCode_text_size">18dp</dimen>
 </resources>
