--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
   <color name="colorPrimary">#03A9F4</color>//Light Blue 500
   <color name="colorPrimaryDark">#0288D1</color>//Light Blue 700
-  <color name="colorSecondary">#4FC3F7</color>//Light Blue 300
+  <color name="colorSecondary" tools:ignore="UnusedResources">#4FC3F7</color>//Light Blue 300
   <color name="colorAccent">#FF6E40</color>//Deep Orange A200
 
     <color name="ic_launcher_background">#FFFFFF</color>
