--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
   <dimen name="default_padding">16dp</dimen>
   <dimen name="default_margin">@dimen/default_padding</dimen>
   <dimen name="small_padding">8dp</dimen>
-  <dimen name="small_margin">@dimen/small_padding</dimen>
+  <dimen name="small_margin" tools:ignore="UnusedResources">@dimen/small_padding</dimen>
   <dimen name="synoptic_size">40dp</dimen>
   <dimen name="default_text_size">18sp</dimen>
   <dimen name="dialog_size">300dp</dimen>
