--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
   <!-- Base application theme. -->
   <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -9,7 +9,7 @@
   </style>
 
   <style name="Synoptic">
-    <item name="android:textSize">16dp</item>
+    <item name="android:textSize" tools:ignore="SpUsage">16dp</item>
     <item name="android:gravity">center</item>
     <item name="android:textColor">@android:color/white</item>
     <item name="android:background">@drawable/line_background</item>
