--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
   <dimen name="default_text_size">18sp</dimen>
   <dimen name="dialog_size">300dp</dimen>
   <dimen name="busStopCode_text_size">18dp</dimen>
+  <dimen name="widget_margin">8dp</dimen>
 </resources>
