--- a/app/src/main/res/layout/app_widget.xml
+++ b/app/src/main/res/layout/app_widget.xml
@@ -1,89 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
-  android:id="@+id/headerWidget"
+  xmlns:tools="http://schemas.android.com/tools"
   android:orientation="vertical"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:background="@android:color/white"
   android:padding="@dimen/widget_margin">
 
   <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:padding="5dp"
-    android:background="@color/colorPrimary">
+    android:background="@color/colorPrimary"
+    android:baselineAligned="false">
 
     <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:orientation="horizontal">
+      android:layout_width="0dp"
+      android:layout_weight="1"
+      android:layout_height="match_parent"
+      android:orientation="vertical">
 
       <TextView
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/codeStop_textview"
-        android:textSize="17sp"
+        android:textSize="17dp"
         android:textColor="@android:color/white"
         android:textStyle="bold"
         android:layout_gravity="center_horizontal"
         android:padding="1dp"
-        android:singleLine="true" />
+        android:maxLines="1"
+        android:ellipsize="end"
+        tools:text="279"/>
+
+      <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/nameStop_textview"
+        android:textSize="13dp"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:textColor="@android:color/white"
+        android:padding="1dp"
+        tools:text="Hospital Clínico T"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+      android:id="@+id/syncContainer"
+      android:layout_width="wrap_content"
+      android:layout_height="match_parent"
+      android:orientation="vertical">
+
+      <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
+
+        <ImageView
+          android:id="@+id/refresh_button"
+          android:layout_width="24dp"
+          android:layout_height="24dp"
+          android:src="@drawable/ic_sync"
+          android:clickable="true"
+          android:padding="1dp"
+          android:visibility="visible"
+          android:focusable="true" />
+
+        <ProgressBar
+          style="?android:attr/progressBarStyleSmall"
+          android:layout_width="24dp"
+          android:layout_height="24dp"
+          android:id="@+id/progressBar"
+          android:padding="1dp"
+          android:visibility="gone" />
+
+      </FrameLayout>
 
       <TextView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:id="@+id/hourSync_textview"
-        android:textSize="13sp"
+        android:textSize="13dp"
         android:textColor="@color/button_material_dark"
-        android:gravity="center_vertical"
+        android:gravity="bottom"
         android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp" />
-
-      <ImageView
-        android:id="@+id/refresh_button"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:src="@drawable/ic_sync"
-        android:clickable="true"
-        android:padding="1dp"
-        android:visibility="visible"
-        android:focusable="true" />
-
-      <ProgressBar
-        style="?android:attr/progressBarStyleSmall"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:id="@+id/progressBar"
-        android:padding="1dp"
-        android:visibility="gone" />
+        android:layout_marginRight="4dp"
+        tools:text="22:00"/>
 
     </LinearLayout>
 
-    <TextView
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:id="@+id/nameStop_textview"
-      android:textSize="13sp"
-      android:maxLines="2"
-      android:ellipsize="end"
-      android:textColor="@android:color/white"
-      android:padding="1dp"
-      android:singleLine="true" />
-
   </LinearLayout>
 
-  <RelativeLayout
+  <FrameLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/white" >
 
     <ListView
       android:id="@+id/times_listview"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:layout_alignParentLeft="true"
       android:divider="@null"
       android:visibility="visible" />
 
@@ -91,14 +109,12 @@
       android:id="@+id/empty_message_textview"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_centerHorizontal="true"
-      android:layout_centerVertical="true"
+      android:layout_gravity="center"
       android:textColor="@android:color/black"
       android:gravity="center"
-      android:textSize="13sp"
-      android:padding="10dp"
+      android:textSize="13dp"
       android:text="@string/no_information" />
 
-  </RelativeLayout>
+  </FrameLayout>
 
 </LinearLayout>
