--- a/app/src/main/res/xml/app_widget_info.xml
+++ b/app/src/main/res/xml/app_widget_info.xml
@@ -6,6 +6,7 @@
   android:minHeight="130dp"
   android:minResizeWidth="110dp"
   android:minResizeHeight="110dp"
+  android:label="@string/favorite_stop"
   android:previewImage="@drawable/preview_app_widget"
   android:resizeMode="horizontal|vertical"
   android:configure="org.galio.bussantiago.widget.WidgetActivity"
