--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -60,17 +60,16 @@
     tools:layout="@layout/busstopscontainer_fragment">
   </fragment>
 
-  <dialog
+  <fragment
     android:id="@+id/timesFragment"
     android:name="org.galio.bussantiago.features.times.TimesFragment"
     tools:layout="@layout/times_fragment">
-  </dialog>
+  </fragment>
 
   <fragment
     android:id="@+id/favoritesFragment"
     android:name="org.galio.bussantiago.features.favorites.FavoritesFragment"
     tools:layout="@layout/favorites_fragment">
-
   </fragment>
 
   <action
