--- a/app/src/main/res/layout/app_widget.xml
+++ b/app/src/main/res/layout/app_widget.xml
@@ -4,8 +4,7 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:orientation="vertical"
   android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:padding="@dimen/widget_margin">
+  android:layout_height="match_parent">
 
   <LinearLayout
     android:layout_width="match_parent"
@@ -32,7 +31,8 @@
         android:padding="1dp"
         android:maxLines="1"
         android:ellipsize="end"
-        tools:text="279"/>
+        tools:text="279"
+        tools:ignore="SpUsage" />
 
       <TextView
         android:layout_width="match_parent"
@@ -43,6 +43,7 @@
         android:ellipsize="end"
         android:textColor="@android:color/white"
         android:padding="1dp"
+        tools:ignore="SpUsage"
         tools:text="Hospital Clínico T"/>
 
     </LinearLayout>
@@ -66,7 +67,8 @@
           android:clickable="true"
           android:padding="1dp"
           android:visibility="visible"
-          android:focusable="true" />
+          android:focusable="true"
+          android:contentDescription="@string/sync_widget" />
 
         <ProgressBar
           style="?android:attr/progressBarStyleSmall"
@@ -83,10 +85,11 @@
         android:layout_height="match_parent"
         android:id="@+id/hourSync_textview"
         android:textSize="13dp"
-        android:textColor="@color/button_material_dark"
+        android:textColor="#ff5a595b"
         android:gravity="bottom"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
+        tools:ignore="SpUsage"
         tools:text="22:00"/>
 
     </LinearLayout>
@@ -110,10 +113,11 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
-      android:textColor="@android:color/black"
+      android:textColor="#ff5a595b"
       android:gravity="center"
       android:textSize="13dp"
-      android:text="@string/no_information" />
+      android:text="@string/no_information"
+      tools:ignore="SpUsage" />
 
   </FrameLayout>
 
