--- a/app/src/main/res/layout/time_item_widget.xml
+++ b/app/src/main/res/layout/time_item_widget.xml
@@ -28,7 +28,8 @@
       android:textStyle="bold"
       android:layout_gravity="center"
       android:textColor="@android:color/white"
-      tools:text="P2"/>
+      tools:text="P2"
+      tools:ignore="SpUsage" />
 
   </FrameLayout>
 
@@ -41,6 +42,7 @@
     android:ellipsize="end"
     android:layout_marginStart="12dp"
     android:textColor="@android:color/tab_indicator_text"
-    tools:text="5 min"/>
+    tools:text="5 min"
+    tools:ignore="SpUsage"/>
 
 </LinearLayout>
