--- a/app/src/main/res/layout/app_widget.xml
+++ b/app/src/main/res/layout/app_widget.xml
@@ -48,51 +48,63 @@
 
     </LinearLayout>
 
-    <LinearLayout
-      android:id="@+id/syncContainer"
+    <FrameLayout
       android:layout_width="wrap_content"
-      android:layout_height="match_parent"
-      android:orientation="vertical">
+      android:layout_height="match_parent">
 
-      <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
-
-        <ImageView
-          android:id="@+id/refresh_button"
-          android:layout_width="24dp"
-          android:layout_height="24dp"
-          android:src="@drawable/ic_sync"
-          android:clickable="true"
-          android:padding="1dp"
-          android:visibility="visible"
-          android:focusable="true"
-          android:contentDescription="@string/sync_widget" />
-
-        <ProgressBar
-          style="?android:attr/progressBarStyleSmall"
-          android:layout_width="24dp"
-          android:layout_height="24dp"
-          android:id="@+id/progressBar"
-          android:padding="1dp"
-          android:visibility="gone" />
-
-      </FrameLayout>
-
-      <TextView
+      <LinearLayout
+        android:id="@+id/syncContainer"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:id="@+id/hourSync_textview"
-        android:textSize="13dp"
-        android:textColor="#ff5a595b"
-        android:gravity="bottom"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
-        tools:ignore="SpUsage"
-        tools:text="22:00"/>
+        android:orientation="vertical">
 
-    </LinearLayout>
+        <FrameLayout
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_gravity="center_horizontal">
+
+          <ImageView
+            android:id="@+id/refresh_button"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_sync"
+            android:clickable="true"
+            android:padding="1dp"
+            android:visibility="visible"
+            android:focusable="true"
+            android:contentDescription="@string/sync_widget" />
+
+          <ProgressBar
+            style="?android:attr/progressBarStyleSmall"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:id="@+id/progressBar"
+            android:padding="1dp"
+            android:visibility="gone" />
+
+        </FrameLayout>
+
+        <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="match_parent"
+          android:id="@+id/hourSync_textview"
+          android:textSize="13dp"
+          android:textColor="#ff5a595b"
+          android:gravity="bottom"
+          android:layout_marginLeft="4dp"
+          android:layout_marginRight="4dp"
+          tools:ignore="SpUsage"
+          tools:text="22:00"/>
+
+      </LinearLayout>
+
+      <ImageView
+        android:id="@+id/syncView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:ignore="ContentDescription" />
+
+    </FrameLayout>
 
   </LinearLayout>
 
