--- a/app/src/main/res/xml/widget_wprovider.xml
+++ b/app/src/main/res/xml/widget_wprovider.xml
@@ -9,7 +9,7 @@
   android:label="@string/favorite_stop"
   android:previewImage="@drawable/preview_app_widget"
   android:resizeMode="horizontal|vertical"
-  android:configure="org.galio.bussantiago.widget.WidgetActivity"
+  android:configure="widget.WidgetActivity"
   android:updatePeriodMillis="0"/>
   <!--
    updatePeriodMillis -> By setting 0 as a parameter,
