--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -4,9 +4,8 @@
   xmlns:app="http://schemas.android.com/apk/res-auto">
 
   <item
-    android:id="@+id/favorites_action"
+    android:id="@+id/nav_action"
     android:title="@string/favorites"
-    android:icon="@drawable/ic_menu_favorite"
     app:showAsAction="always"/>
 
 </menu>
