--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -8,4 +8,9 @@
     android:title="@string/favorites"
     app:showAsAction="always"/>
 
+  <item
+    android:id="@+id/search_action"
+    android:title="@string/search_bus_stop"
+    app:showAsAction="never"/>
+
 </menu>
