--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
   <dimen name="small_margin" tools:ignore="UnusedResources">@dimen/small_padding</dimen>
   <dimen name="synoptic_size">40dp</dimen>
   <dimen name="default_text_size">18sp</dimen>
+  <dimen name="large_text_size">22sp</dimen>
   <dimen name="dialog_size">300dp</dimen>
   <dimen name="busStopCode_text_size">18dp</dimen>
 </resources>
