--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -13,4 +13,9 @@
     android:title="@string/search_bus_stop"
     app:showAsAction="never"/>
 
+  <item
+    android:id="@+id/about_action"
+    android:title="@string/about"
+    app:showAsAction="never"/>
+
 </menu>
