--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,5 @@
   <dimen name="large_text_size">22sp</dimen>
   <dimen name="dialog_size">300dp</dimen>
   <dimen name="busStopCode_text_size">18dp</dimen>
+  <dimen name="busStopCode_width">44dp</dimen>
 </resources>
