--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -14,6 +14,11 @@
     app:showAsAction="never"/>
 
   <item
+    android:id="@+id/settings_action"
+    android:title="@string/settings"
+    app:showAsAction="never"/>
+
+  <item
     android:id="@+id/about_action"
     android:title="@string/about"
     app:showAsAction="never"/>
