--- a/app/src/main/res/layouts/app/layout/main_activity.xml
+++ b/app/src/main/res/layouts/app/layout/main_activity.xml
@@ -2,9 +2,11 @@
 <fragment
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/navHostFragment"
   android:name="androidx.navigation.fragment.NavHostFragment"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   app:navGraph="@navigation/nav_graph"
-  app:defaultNavHost="true" />
+  app:defaultNavHost="true"
+  tools:ignore="FragmentTagUsage" />
