--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
+<menu xmlns:tools="http://schemas.android.com/tools"
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto">
 
   <item
     android:id="@+id/nav_action"
     android:title="@string/favorites"
-    app:showAsAction="always"/>
+    app:showAsAction="always"
+    tools:ignore="AlwaysShowAction" />
 
   <item
     android:id="@+id/search_action"
     android:title="@string/search_bus_stop"
+    app:showAsAction="never"/>
+
+  <item
+    android:id="@+id/settings_action"
+    android:title="@string/settings"
     app:showAsAction="never"/>
 
   <item
