--- a/app/src/main/res/layouts/app/layout/menu_item.xml
+++ b/app/src/main/res/layouts/app/layout/menu_item.xml
@@ -7,6 +7,7 @@
   android:orientation="horizontal"
   android:padding="@dimen/default_padding"
   android:background="?attr/selectableItemBackground"
+  android:gravity="center_vertical"
   tools:context="org.galio.bussantiago.features.menu.MenuAdapter">
 
   <ImageView
