--- a/app/src/main/res/layouts/app/layout/line_item.xml
+++ b/app/src/main/res/layouts/app/layout/line_item.xml
@@ -13,11 +13,27 @@
   android:background="?attr/selectableItemBackground"
   tools:context="org.galio.bussantiago.features.lines.LinesAdapter">
 
-  <org.galio.bussantiago.common.model.SynopticView
-    android:id="@+id/synopticView"
-    android:layout_width="@dimen/synoptic_size"
-    android:layout_height="@dimen/synoptic_size"
-    tools:text="P2" />
+  <FrameLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+
+    <org.galio.bussantiago.common.model.SynopticView
+      android:id="@+id/synopticView"
+      android:layout_width="@dimen/synoptic_size"
+      android:layout_height="@dimen/synoptic_size"
+      tools:text="C11" />
+
+    <ImageView
+      android:id="@+id/incidentsImageView"
+      android:layout_width="@dimen/line_incident_icon_size"
+      android:layout_height="@dimen/line_incident_icon_size"
+      android:src="@drawable/ic_incidences"
+      android:layout_gravity="bottom|end"
+      android:background="@drawable/incidents_background"
+      android:padding="@dimen/extra_extra_small_padding"
+      android:importantForAccessibility="no" />
+
+  </FrameLayout>
 
   <TextView
     android:id="@+id/nameTextView"
