--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
   <dimen name="default_margin">@dimen/default_padding</dimen>
   <dimen name="large_margin">32dp</dimen>
   <dimen name="extra_small_padding">4dp</dimen>
+  <dimen name="extra_extra_small_padding">2dp</dimen>
   <dimen name="small_padding">8dp</dimen>
   <dimen name="small_margin" tools:ignore="UnusedResources">@dimen/small_padding</dimen>
   <dimen name="synoptic_size">40dp</dimen>
@@ -14,4 +15,5 @@
   <dimen name="dialog_size">300dp</dimen>
   <dimen name="busStopCode_text_size">18dp</dimen>
   <dimen name="busStopCode_width">44dp</dimen>
+  <dimen name="line_incident_icon_size">14dp</dimen>
 </resources>
