--- a/app/src/main/res/layouts/app/layout/about_fragment.xml
+++ b/app/src/main/res/layouts/app/layout/about_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
@@ -13,7 +12,7 @@
     android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    tools:title="@string/about"/>
+    tools:title="@string/about" />
 
   <ScrollView
     android:layout_width="match_parent"
@@ -39,13 +38,13 @@
         android:text="@string/app_name"
         android:textSize="@dimen/small_text_size"
         android:textStyle="bold"
-        android:layout_marginTop="@dimen/default_margin"/>
+        android:layout_marginTop="@dimen/default_margin" />
 
       <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_version"
-        android:textSize="@dimen/extra_small_text_size"/>
+        android:textSize="@dimen/extra_small_text_size" />
 
       <LinearLayout
         style="@style/AboutInfoBox"
@@ -53,16 +52,16 @@
 
         <TextView
           style="@style/AboutInfoBox_Title"
-          android:text="@string/author"/>
+          android:text="@string/author" />
 
         <TextView
           style="@style/AboutInfoBox_Description"
-          android:text="@string/author_name"/>
+          android:text="@string/author_name" />
 
         <TextView
           style="@style/AboutInfoBox_Description"
           android:text="@string/author_email"
-          android:autoLink="email"/>
+          android:autoLink="email" />
 
       </LinearLayout>
 
@@ -72,27 +71,27 @@
 
         <TextView
           style="@style/AboutInfoBox_Title"
-          android:text="@string/privacy_policy"/>
+          android:text="@string/privacy_policy" />
 
         <TextView
           style="@style/AboutInfoBox_Description"
-          android:text="@string/privacy_policy_description"/>
+          android:text="@string/privacy_policy_description" />
 
         <TextView
           style="@style/AboutInfoBox_Description"
-          android:text="@string/privacy_policy_user_data_label"/>
+          android:text="@string/privacy_policy_user_data_label" />
 
         <TextView
           style="@style/AboutInfoBox_Description"
-          android:text="@string/privacy_policy_user_data_description"/>
+          android:text="@string/privacy_policy_user_data_description" />
 
         <TextView
           style="@style/AboutInfoBox_Description"
-          android:text="@string/privacy_policy_permission_label"/>
+          android:text="@string/privacy_policy_permission_label" />
 
         <TextView
           style="@style/AboutInfoBox_Description"
-          android:text="@string/privacy_policy_permission_description"/>
+          android:text="@string/privacy_policy_permission_description" />
 
       </LinearLayout>
 
