--- a/app/src/main/res/layouts/app/layout/favorite_item.xml
+++ b/app/src/main/res/layouts/app/layout/favorite_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
@@ -26,6 +25,6 @@
     android:layout_height="wrap_content"
     android:textSize="@dimen/default_text_size"
     android:layout_marginStart="@dimen/small_margin"
-    tools:text="Rúa de Sandino (fr. nº 62A) "/>
+    tools:text="Rúa de Sandino (fr. nº 62A) " />
 
 </LinearLayout>
