--- a/app/src/main/res/layouts/app/layout/information_fragment.xml
+++ b/app/src/main/res/layouts/app/layout/information_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
@@ -15,7 +14,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="@dimen/default_padding"
-      android:textSize="@dimen/default_text_size"/>
+      android:textSize="@dimen/default_text_size" />
 
   </ScrollView>
 
@@ -25,6 +24,6 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:visibility="gone"
-    tools:visibility="visible"/>
+    tools:visibility="visible" />
 
 </FrameLayout>
