--- a/app/src/main/res/layouts/app/layout/menu_fragment.xml
+++ b/app/src/main/res/layouts/app/layout/menu_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
@@ -22,6 +21,6 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:visibility="gone"
-    tools:visibility="visible"/>
+    tools:visibility="visible" />
 
 </FrameLayout>
