--- a/app/src/main/res/layouts/app/layout/times_fragment.xml
+++ b/app/src/main/res/layouts/app/layout/times_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
@@ -40,6 +39,6 @@
     android:layout_alignParentBottom="true"
     android:layout_alignParentEnd="true"
     android:layout_margin="@dimen/default_margin"
-    tools:src="@drawable/ic_fab_favorite"/>
+    tools:src="@drawable/ic_fab_favorite" />
 
 </RelativeLayout>
