--- a/app/src/main/res/layouts/widget/layout/time_item_widget.xml
+++ b/app/src/main/res/layouts/widget/layout/time_item_widget.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
@@ -12,7 +11,7 @@
 
   <FrameLayout
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content">
 
     <ImageView
       android:id="@+id/lineWidgetImageView"
@@ -43,6 +42,6 @@
     android:layout_marginStart="12dp"
     android:textColor="@android:color/tab_indicator_text"
     tools:text="5 min"
-    tools:ignore="SpUsage"/>
+    tools:ignore="SpUsage" />
 
 </LinearLayout>
