--- a/app/src/main/res/menu/times_menu.xml
+++ b/app/src/main/res/menu/times_menu.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-  xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto">
 
   <item
     android:id="@+id/sync_action"
     android:title="@string/update_data"
     android:icon="@drawable/ic_sync"
-    app:showAsAction="always"/>
+    app:showAsAction="always" />
 
 </menu>
