--- a/app/src/main/res/layouts/app/layout/favorites_dialog_fragment.xml
+++ b/app/src/main/res/layouts/app/layout/favorites_dialog_fragment.xml
@@ -44,7 +44,7 @@
       android:layout_height="match_parent"
       android:scrollbars="vertical"
       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-      tools:listitem="@layout/favorite_item"
+      tools:listitem="@layout/busstop_item"
       tools:itemCount="4"/>
 
     <TextView
