Move common classes to shared module

--- a/shared/src/main/res/layout/busstop_item.xml
+++ b/shared/src/main/res/layout/busstop_item.xml
@@ -7,7 +7,7 @@
   android:padding="@dimen/default_padding"
   android:gravity="center_vertical"
   android:background="?attr/selectableItemBackground"
-  tools:context="org.galio.bussantiago.widget.BusStopFavoritesAdapter">
+  tools:context="org.galio.bussantiago.shared.BusStopFavoritesAdapter">
 
   <TextView
     android:id="@+id/codeTextView"
