Fix SelectableText warnings

--- a/app/src/main/res/layout/information_fragment.xml
+++ b/app/src/main/res/layout/information_fragment.xml
@@ -14,7 +14,8 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="@dimen/default_padding"
-      android:textSize="@dimen/default_text_size" />
+      android:textSize="@dimen/default_text_size"
+      android:textIsSelectable="true" />
 
   </ScrollView>
 
