--- a/app/src/main/res/layout/busstop_item.xml
+++ b/app/src/main/res/layout/busstop_item.xml
@@ -7,7 +7,8 @@
   android:padding="@dimen/default_padding"
   android:gravity="center_vertical"
   android:background="?attr/selectableItemBackground"
-  tools:context="org.galio.bussantiago.features.stops.list.BusStopsListAdapter">
+  tools:context="org.galio.bussantiago.features.stops.list.BusStopsListAdapter"
+  tools:ignore="SelectableText">
 
   <TextView
     android:id="@+id/codeTextView"
