--- a/app/src/main/res/layout/incidence_item.xml
+++ b/app/src/main/res/layout/incidence_item.xml
@@ -7,5 +7,6 @@
   android:textSize="@dimen/default_text_size"
   android:padding="@dimen/default_padding"
   android:clickable="false"
+  android:textIsSelectable="true"
   tools:context="org.galio.bussantiago.features.incidences.IncidencesAdapter"
   tools:text="Desvío en la línea 7 por corte de tráfico en la calle Castrón Douro (a partir del lunes 20/8/2018)" />
