--- a/app/src/main/res/layout/menu_fragment.xml
+++ b/app/src/main/res/layout/menu_fragment.xml
@@ -4,7 +4,8 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context="org.galio.bussantiago.features.menu.MenuFragment">
+  tools:context="org.galio.bussantiago.features.menu.MenuFragment"
+  tools:ignore="SelectableText">
 
   <LinearLayout
     android:id="@+id/menuOptionsContainer"
