--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -7,7 +7,8 @@
   android:padding="@dimen/default_padding"
   android:background="?attr/selectableItemBackground"
   android:gravity="center_vertical"
-  tools:context="org.galio.bussantiago.features.menu.MenuAdapter">
+  tools:context="org.galio.bussantiago.features.menu.MenuAdapter"
+  tools:ignore="SelectableText">
 
   <ImageView
     android:id="@+id/iconImageView"
