Increase clikable area of bus stop in widget

--- a/widget/src/main/res/layout/app_widget.xml
+++ b/widget/src/main/res/layout/app_widget.xml
@@ -15,6 +15,7 @@
     android:baselineAligned="false">
 
     <LinearLayout
+      android:id="@+id/busStopContainer"
       android:layout_width="0dp"
       android:layout_weight="1"
       android:layout_height="match_parent"
