Add extra padding to About screen

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,7 +30,7 @@
     <item name="android:layout_height">wrap_content</item>
     <item name="android:orientation">vertical</item>
     <item name="android:background">@drawable/about_info_box_bg</item>
-    <item name="android:padding">@dimen/extra_small_padding</item>
+    <item name="android:padding">@dimen/small_padding</item>
   </style>
 
   <style name="AboutInfoBox_Title">
