Migrate Incidences screen to compose (#97)
* Migrate incidences screen to Compose

* Wrap Composable with ButSantiagoTheme

* Added Divider to incidences list

* Add title to incidences item

* Implement navigation safe args for Incidences

* Remove unused code

* Remove unnecessary sorting login in Incidences

* Add tooling to make @Preview available in release

* Implement navigation to dialog

* Create IncidencesUserInteractions

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,6 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/nav_graph"
   app:startDestination="@+id/searchFragment">
 
   <fragment
@@ -56,8 +57,13 @@
 
   <fragment
     android:id="@+id/incidencesFragment"
-    android:name="org.galio.bussantiago.features.incidences.IncidencesFragment"
-    tools:layout="@layout/incidences_fragment" />
+    android:name="org.galio.bussantiago.features.incidences.IncidencesFragment">
+
+    <argument
+      android:name="lineId"
+      app:argType="integer" />
+
+  </fragment>
 
   <fragment
     android:id="@+id/busStopsFragment"
